Able to find flower by db instead of being hard coded
Issue #7

--- a/client/src/app/admin/photo.component.html
+++ b/client/src/app/admin/photo.component.html
@@ -16,6 +16,7 @@
 
         <div *ngIf="plant.photoLocation">
             <img [attr.src]="this.url + 'plants/' + this.id + '/getImage'">
+            <br> Uploading new photo will replace this photo.
         </div><br>
 
         <file-upload #fu (change)="filename = undefined; uploadAttempted = false" [multiple]="false">-</file-upload>
