--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -18,14 +18,14 @@
         </button>
     </a>
 
-    <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/deleteData']">
+    <br><br><button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/deleteData']">
         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
         Delete Old Data
     </button>
 
-    <br><br><button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/PhotoComponent']">
+    <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/PhotoComponent']">
         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-        Add / Remove / Change Photos for desired Plants.
+        Upload Photos
     </button>
 
 </div>
