--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -1,4 +1,4 @@
-<div class="menu">
+<div *ngIf="this.authorized" class="menu">
     <h2>Administrator Tasks</h2>
 
     <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/exportData']"  >
