Prevent all the admin pages from loading without authentication
Issue #2

--- a/client/src/app/admin/delete.component.html
+++ b/client/src/app/admin/delete.component.html
@@ -1,4 +1,4 @@
-<div class="delete-page">
+<div *ngIf="this.authorized" class="delete-page">
     <h2>Delete Data</h2>
 
     <ul class="list-group">
