--- a/client/src/app/admin/export.component.html
+++ b/client/src/app/admin/export.component.html
@@ -1,4 +1,4 @@
-<div class="export-page">
+<div *ngIf="this.authorized" class="export-page">
     <h2>Export Feedback</h2>
 
     <ul class="list-group">
