--- a/client/src/app/plants/plant.component.html
+++ b/client/src/app/plants/plant.component.html
@@ -4,7 +4,7 @@
 
     <br/>
     <div  *ngIf="plant.photoLocation" style="resize: vertical; width: 100%">
-        <img [attr.src]="this.url + 'plants/' + this.id + '/getImage'">
+        <img [attr.src]="this.url + 'plants/' + this.id + '/getImage'" width = "100%">
         <br>
     </div>
 
