Plant ID search works when pressing enter
issue #7

--- a/client/src/app/admin/photo.component.html
+++ b/client/src/app/admin/photo.component.html
@@ -3,7 +3,7 @@
 
 <div>
     Plant ID#
-    <input #textbox type="text" [(ngModel)]="textValue">
+    <input #textbox (keyup)="onKey($event)" type="text" [(ngModel)]="textValue">
     <button (click)="getPlant(textbox.value)" value = "clicked" class="btn btn-primary">Find</button>
 </div>
 
