--- a/client/src/app/admin/admin-component.html
+++ b/client/src/app/admin/admin-component.html
@@ -24,7 +24,7 @@
     </button>
 
     <button type="button" class="btn btn-primary btn-lg" [routerLink]="['/admin/PhotoComponent']">
-        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
         Upload Photos
     </button>
 
