Fix incorrect display of "Invalid plant ID" error in PhotoComponent
Issue #7

--- a/client/src/app/admin/photo.component.html
+++ b/client/src/app/admin/photo.component.html
@@ -32,7 +32,7 @@
 
     </div>
 
-    <div *ngIf="!plant && clicked">
+    <div *ngIf="!plant && clicked && textbox.value !== ''">
         Invalid plant ID
 
 
