--- a/client/src/app/admin/photo.component.html
+++ b/client/src/app/admin/photo.component.html
@@ -32,7 +32,7 @@
 
     </div>
 
-    <div *ngIf="!plant && clicked && textbox.value !== ''">
+    <div *ngIf="!plant && clicked && this.clicked === true">
         Invalid plant ID
 
 
