Update homepage with new wordings

--- a/client/src/app/homepage/homepage.component.html
+++ b/client/src/app/homepage/homepage.component.html
@@ -24,22 +24,39 @@
 </div>
 
 <h3> Welcome to the WCROC Horticulture Display Garden</h3>
-<i class="fa fa-quote-left fa-3x fa-pull-left fa-border" aria-hidden="true"></i>
-<p>The garden includes plantings and research from several plant breeding companies from around the world.
-We invite you to look, smell and touch, but please do not dig, pick or cut any flowers or plant materials.
+<!-- <i class="fa fa-quote-left fa-3x fa-pull-left fa-border" aria-hidden="true"></i> -->
+<p>
+    Each growing season, hundreds of annual flower cultivars from plant breeding
+    companies around the world are trialed at the WCROC. Cultivars are grown from
+    seed or are vegetatively propagated in our greenhouse. Most of the plants you'll
+    find in the Horticulture Display Garden are under evaluation. All flowers are
+    labeled, allowing visitors to take note of top performing cultivars under
+    regional conditions.
 </p>
 <hr>
-<h4>From this page you can search for your favorite flower types in two ways:</h4>
+<h4>Search for your favorite flower:</h4>
 <ol>
-     <li> Search by a flower of your choosing and it will bring up all the different type of that flower and their location in the garden</li>
-     <li> Select a bed from the dropdown and navigate to a flower from there</li>
+    <li>
+        Enter the common name (e.g. Petunia) in the search box to view a
+        list of all that type of flower along with their corresponding location in the Garden.
+    </li>
+    <p id="splitter" >
+        <strong>OR</strong>
+    </p>
+    <li>
+        Select a garden bed from the drop-down menu and view the list of
+        all flowers in that particular garden bed.
+    </li>
 </ol>
 <hr>
 <h4>
-    Once you find your plant feel free leave feedback, which helps us improve the garden.
+    We welcome you to participate in our plant evaluations by leaving comments and feedback about our flowers
 </h4>
 <hr>
 <style>
+    #splitter {
+       margin: 8px 0 8px;
+    }
     .flower-col {
         width: 70%;
     }
