uploadId -> uploadID in ExportComponent

--- a/client/src/app/admin/export.component.html
+++ b/client/src/app/admin/export.component.html
@@ -7,13 +7,13 @@
                 Data Set
             </div>
         </li>
-        <li *ngFor="let uploadId of uploadIds" class="row list-group-item">
+        <li *ngFor="let uploadID of uploadIDs" class="row list-group-item">
 
             <div class="col-sm-2">
-                {{ uploadId }}
+                {{ uploadID }}
             </div>
             <div class="col-sm-4">
-                <a [attr.href]="this.url + uploadId" target="_blank">
+                <a [attr.href]="this.url + uploadID" target="_blank">
                     <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
                     Download feedback for this data set
                 </a>
